some polishing work

--- a/public/elements/paper-card/paper-card.html
+++ b/public/elements/paper-card/paper-card.html
@@ -10,6 +10,7 @@
       <div class="image" style="height: {{['header-height']}};">
         <content select="img"></content>
         <content select="h1"></content>
+        <content select="file-input"></content>
       </div>
       <content></content>
       <core-menu class="actions">
